--- a/sdkjs-plugins/content/gnewsapi/newsapi.html
+++ b/sdkjs-plugins/content/gnewsapi/newsapi.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="../v1/plugins-ui.js"></script>
     <link rel="stylesheet" href="../v1/plugins.css" />
     <script type="text/javascript" src="scripts/newsapi.js"></script>
-    <link rel="stylesheet" href="style/black-theme.css" />
+    <link rel="stylesheet" href="style/white-theme.css" />
   </head>
   <body>
     <!-- Step 1: API Key Setup -->
