--- a/sdkjs-plugins/content/gnewsapi/newsapi.html
+++ b/sdkjs-plugins/content/gnewsapi/newsapi.html
@@ -6,8 +6,7 @@
     <script type="text/javascript" src="../v1/plugins.js"></script>
     <script type="text/javascript" src="../v1/plugins-ui.js"></script>
     <link rel="stylesheet" href="../v1/plugins.css" />
-    <script type="text/javascript" src="scripts/newsapi.js"></script>
-    <link rel="stylesheet" href="style/white-theme.css" />
+    <script type="text/javascript" src="scripts/gnewsapi.js"></script>
   </head>
   <body>
     <!-- Step 1: API Key Setup -->
@@ -49,13 +48,37 @@
           onclick="switchTab('search')"
           id="search-tab"
         >
-          Search Endpoint
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-search"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"
+            />
+          </svg>
+          Search
         </button>
         <button
           class="tab-btn"
           onclick="switchTab('headlines')"
           id="headlines-tab"
         >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-star"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z"
+            />
+          </svg>
           Top Headlines
         </button>
       </div>
@@ -72,12 +95,12 @@
         <!-- Search Endpoint Tab Content -->
         <div id="search-content" class="tab-content active">
           <div class="form-group">
-            <label for="search-query">Prompt:</label>
-            <input
-              type="text"
+            <label for="search-query">Prompt</label>
+            <textarea
               id="search-query"
-              placeholder="Search with singular keywords, or surround complete phrases with quotation marks "
-            />
+              rows="3"
+              placeholder="Search with singular keywords, or surround complete phrases with quotation marks"
+            ></textarea>
           </div>
 
           <div class="filter-section">
@@ -131,11 +154,11 @@
         <div id="headlines-content" class="tab-content" style="display: none">
           <div class="form-group">
             <label for="headlines-query">Prompt</label>
-            <input
-              type="text"
+            <textarea
               id="headlines-query"
+              rows="3"
               placeholder="Search with singular keywords, or surround complete phrases with quotation marks"
-            />
+            ></textarea>
           </div>
 
           <div class="form-group">
@@ -192,7 +215,8 @@
             Show advanced settings
           </button>
         </div>
-        <div class="settings-actions">
+
+        <div class="bottom-actions">
           <button class="btn-link" onclick="changeApiKey()">Reconfigure</button>
         </div>
       </div>
@@ -202,13 +226,15 @@
       <!-- Results Section - Hidden by default -->
       <div id="results-section" class="results-section" style="display: none">
         <div class="results-header-container">
-          <button class="btn-back" onclick="goBackToSearch()">← Back</button>
           <div class="results-header">Search Results</div>
         </div>
 
         <div class="articles-container">
           <div id="articles-list"></div>
         </div>
+        <button class="btn-back" onclick="goBackToSearch()">
+          Back to search
+        </button>
       </div>
     </div>
   </body>
